# GoudEngine

./: .cursorignore  .dockerignore  .editorconfig  .geminiignore  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.jsonc  .mcp.json  .release-please-manifest.json  AGENTS.md  AI_CONTRIBUTORS.md  ALPHA_ROADMAP.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENG2-CONTINUE.md  GoudEngine.sln  PERFORMANCE_BENCHMARKS_IMPLEMENTATION.md  README.md  SECURITY.md  TODO.md  __Deprecated__generate.sh  book.toml  build.sh  clean.sh  clippy.toml  codecov.yml  codegen.sh  deny.toml  dev.sh  docker-compose.yml  generate.sh  (+11 more)
examples/c/flappy_bird/: CMakeLists.txt
examples/c/smoke/: CMakeLists.txt  main.c
examples/cpp/cmake_example/: CMakeLists.txt  main.cpp
examples/cpp/feature_lab/: CMakeLists.txt
examples/cpp/flappy_bird/: CMakeLists.txt
examples/cpp/smoke/: CMakeLists.txt  main.cpp
goud_engine/: BENCHMARKS.md  BENCHMARKS_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cbindgen.toml
goud_engine/benches/: AGENTS.md  asset_benchmarks.rs  ecs_benchmarks.rs  engine_tick_benchmarks.rs  ffi_component_benchmarks.rs  physics_benchmarks.rs  physics_benchmarks.rs.disabled  pool_benchmarks.rs  render_benchmarks.rs  renderer3d_frame_benchmarks.rs  renderer3d_real_wgpu_shadow_benchmarks.rs  scene_culling_benchmarks.rs  serialization_benchmarks.rs  spatial_grid_benchmarks.rs  sprite_batch_benchmarks.rs
goud_engine/benches/baselines/: criterion_baseline.json  render_baseline.json
goud_engine/benches/helpers/: null_backend.rs  scene3d.rs
goud_engine/build_support/: c_header.rs  ffi_manifest.rs  mod.rs
goud_engine/examples/: README.md  action_mapping_example.md  batch_operations_example.md  ecs_rendering_example.md  flappy_goud_ecs_example.md  game_migration_guide.md  gamepad_example.md  goud_jumper_ecs_example.md  hot_reload_example.md  input_buffering_example.md  input_manager_example.md  opengl_buffer_example.md  texture_loading_example.md
goud_engine/src/: ffi_privates.rs  game.rs  lib.rs  sdk.rs  test_helpers.rs  types.rs
goud_engine/src/assets/: AGENTS.md  asset.rs  audio_manager.rs  audio_manager_stub.rs  handle.rs  hot_reload.rs  loader.rs  mod.rs  packager.rs  server.rs  storage.rs  web_fetch.rs
goud_engine/src/component_ops/: AGENTS.md  batch_ops.rs  helpers.rs  mod.rs  single_ops.rs  storage.rs
goud_engine/src/context_registry/: AGENTS.md  context.rs  context_id.rs  mod.rs  registry.rs
goud_engine/src/core/: AGENTS.md  CLAUDE.md  component_ops.rs  context_id.rs  context_registry.rs  error.rs  event.rs  events.rs  handle.rs  math.rs  mod.rs  types.rs
goud_engine/src/ecs/: AGENTS.md  CLAUDE.md  archetype.rs  broad_phase.rs  collision.rs  component.rs  entity.rs  input_manager.rs  mod.rs  physics_world.rs  resource.rs  schedule.rs  sparse_set.rs  storage.rs  world.rs
goud_engine/src/ffi/: AGENTS.md  CLAUDE.md  collision.rs  component.rs  component_sprite.rs  component_transform2d.rs  context.rs  debug.rs  engine_config.rs  entity.rs  error.rs  input.rs  mod.rs  network.rs  plugin.rs  providers.rs  renderer.rs  renderer3d.rs  scene.rs  scene_loading.rs  scene_loading_tests.rs  scene_tests.rs  scene_transition.rs  scene_transition_tests.rs  types.rs  window.rs
goud_engine/src/jni/: generated.g.rs  generated.rs  helpers.rs  mod.rs  tests.rs
goud_engine/src/libs/: mod.rs  profiling.rs
goud_engine/src/rendering/: mod.rs  render_system.rs  ui_render_system.rs  ui_render_system_tests.rs  viewport.rs
goud_engine/src/sdk/: AGENTS.md  CLAUDE.md  collision.rs  color.rs  component_ops.rs  components.rs  context.rs  debug_overlay.rs  engine_config.rs  entity.rs  entity_builder.rs  game.rs  game_config.rs  game_config_tests.rs  input.rs  lua_runner.rs  mod.rs  network_debug_overlay.rs  rendering.rs  rendering_3d.rs  texture.rs  window.rs  window_tests.rs
goud_engine/src/ui/: allocator.rs  component.rs  layout.rs  manager.rs  mod.rs  node.rs  node_id.rs  render_commands.rs  tests.rs  theme.rs  visuals.rs
goud_engine/src/wasm/: AGENTS.md  audio.rs  collision.rs  ecs_ops.rs  input.rs  lifecycle.rs  mod.rs  network.rs  rendering.rs  sprite_renderer.rs  tests.rs  texture_loader.rs  types.rs  ui.rs
goud_engine/test_assets/fonts/: test_bitmap.fnt
goud_engine/tests/: ffi_safety.rs  integration.rs  jni_smoke.rs  lua_hot_reload.rs  lua_script_integration.rs  lua_tools_integration.rs  native_main_thread.rs  native_main_thread_ffi.rs  renderer3d_frame_counts.rs  spec.rs  test_goud_api_macro.rs  window_test.rs
goud_engine/tests/assets/: test_draw.lua
goud_engine/tests/ffi_safety/: helpers.rs  invalid_handle_tests.rs  lifecycle_safety_tests.rs  null_pointer_tests.rs
goud_engine/tests/integration/: ecs_integration.rs  ffi_cross_layer.rs  helpers.rs
goud_engine/tests/spec/: eng2_p0_01_gpu_timestamp_queries.rs  eng2_p0_03_bench_suite_expansion.rs  eng2_p0_04_profiling_integration.rs
goud_engine_macros/: AGENTS.md  Cargo.toml  README.md
goud_engine_macros/src/: codegen_helpers.rs  ffi_gen.rs  lib.rs  manifest.rs  type_mapping.rs
goud_engine_macros/src/codegen_helpers/: mod.rs  params.rs  receiver.rs  return_handling.rs
goud_engine_macros/src/type_mapping/: helpers.rs  mapping.rs  mod.rs  tests.rs  types.rs
modules/engine/: CMakeLists.txt
modules/engine/include/: Engine.h  Game.h  SDL2_OpenGL_Game.h
modules/engine/src/: Engine.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/include/: Renderer.h  SDL2_OpenGLRenderer.h
modules/graphics/src/: Renderer.cpp  SDL2_OpenGLRenderer.cpp
sdks/c/tests/: CMakeLists.txt  test_constants.c  test_context.c  test_engine_config.c  test_error.c
sdks/cpp/: CMakeLists.txt  README.md  meson.build
sdks/cpp/cmake/: FindGoudEngine.cmake  GoudEngineConfig.cmake
sdks/cpp/subprojects/: goud-engine.wrap
sdks/cpp/tests/: CMakeLists.txt  README.md  test_constants.cpp  test_context.cpp  (+3 more)
sdks/rust/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
tools/goudengine-mcp/: Cargo.toml  README.md
(+2561 files in other folders)
