[workspace]
members = ["goud_engine", "goud_engine_macros", "sdks/rust", "sdks/typescript/native", "tools", "examples/rust/flappy_bird", "examples/rust/feature_lab"]
default-members = ["goud_engine"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false
