[package]
name = "goud_engine"
version = "0.0.817" # x-release-please-version
edition = "2021"
license = "MIT"
description = "GoudEngine core — internal implementation crate. Use goud-engine-sdk for the public API."
repository = "https://github.com/aram-devdocs/GoudEngine"
homepage = "https://github.com/aram-devdocs/GoudEngine"
readme = "README.md"
keywords = ["game-engine", "ecs", "rendering", "ffi"]
categories = ["game-engines", "graphics", "rendering"]

# Enable parallel compilation
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[features]
default = ["native"]
native = ["dep:gl", "dep:glfw", "dep:rodio", "dep:notify", "dep:cc", "dep:bindgen", "dep:cbindgen", "dep:tiled", "dep:rayon", "dep:env_logger"]
wgpu-backend = ["dep:wgpu", "dep:winit", "dep:naga", "dep:pollster"]
web = ["wgpu-backend", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys"]

# TODO: https://github.com/aram-devdocs/GoudEngine/issues/8
[dependencies]
cc = { version = "1.0.79", optional = true }
bindgen = { version = "0.64.0", optional = true }
cgmath = "0.18.0"
env_logger = { version = "0.11.6", optional = true }
gl = { version = "0.14.0", optional = true }
glfw = { version = "0.59.0", optional = true }
log = "0.4.17"
thiserror = "1.0.31"
image = "0.24"
cbindgen = { version = "0.27.0", optional = true }
tiled = { version = "0.13.0", optional = true }
rayon = { version = "1.10", optional = true }
notify = { version = "6.1", optional = true }
rodio = { version = "0.17", optional = true }
bytemuck = "1.14"
wgpu = { version = "28", optional = true }
winit = { version = "0.30", optional = true }
naga = { version = "28", optional = true, features = ["glsl-in", "wgsl-out"] }
pollster = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Response",
    "Document", "HtmlCanvasElement", "Element",
    "Performance",
    "console",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode",
    "GainNode", "AudioDestinationNode", "BaseAudioContext",
] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
husky-rs = "0.1.3"
tempfile = "3.8"
bytemuck = "1.14"
criterion = { version = "0.5", features = ["html_reports"] }
goud_engine_macros = { path = "../goud_engine_macros" }

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "asset_benchmarks"
harness = false

# [[bench]]
# name = "physics_benchmarks"
# harness = false
# Note: Disabled until ColliderShape and aabb module are exported publicly
