[package]
name = "goud-engine-core"
version = "0.0.828" # x-release-please-version
edition = "2021"
license = "MIT"
description = "GoudEngine core — internal implementation crate. Use goud-engine for the public API."
repository = "https://github.com/aram-devdocs/GoudEngine"
homepage = "https://github.com/aram-devdocs/GoudEngine"
readme = "README.md"
keywords = ["game-engine", "ecs", "rendering", "ffi"]
categories = ["game-engines", "graphics", "rendering"]

# Enable parallel compilation
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[features]
default = ["native"]
native = ["dep:gl", "dep:glfw", "dep:rodio", "dep:notify", "dep:cc", "dep:bindgen", "dep:cbindgen", "dep:tiled", "dep:rayon", "dep:env_logger", "dep:toml", "dep:gltf", "dep:tobj"]
net-udp = []
net-ws = ["dep:tungstenite"]
wgpu-backend = ["dep:wgpu", "dep:winit", "dep:naga", "dep:pollster"]
web = ["wgpu-backend", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys"]
rapier2d = ["dep:rapier2d"]
rapier3d = ["dep:rapier3d"]
headless = []

# TODO: https://github.com/aram-devdocs/GoudEngine/issues/8
[dependencies]
cc = { version = "1.2", optional = true }
bindgen = { version = "0.64.0", optional = true }
cgmath = "0.18.0"
crossbeam-channel = "0.5"
env_logger = { version = "0.11.6", optional = true }
gl = { version = "0.14.0", optional = true }
glfw = { version = "0.59.0", optional = true }
log = "0.4.17"
thiserror = "2.0.12"
image = "0.25"
fontdue = "0.9"
cbindgen = { version = "0.29", optional = true }
tiled = { version = "0.15", optional = true }
rayon = { version = "1.11", optional = true }
rapier2d = { version = "0.22", optional = true }
rapier3d = { version = "0.22", optional = true }
notify = { version = "8", optional = true }
rodio = { version = "0.22", optional = true }
bincode = "1"
tungstenite = { version = "0.26", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", optional = true }
gltf = { version = "1.4", optional = true }
tobj = { version = "4.0", optional = true, features = ["ahash"] }
bytemuck = "1.14"
goud_engine_macros = { version = "=0.0.828", path = "../goud_engine_macros" } # x-release-please-version
wgpu = { version = "28", optional = true }
winit = { version = "0.30", optional = true }
naga = { version = "28", optional = true, features = ["glsl-in", "wgsl-out"] }
pollster = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Response",
    "Document", "HtmlCanvasElement", "Element",
    "Performance",
    "console",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode",
    "GainNode", "AudioDestinationNode", "BaseAudioContext",
] }

[lib]
name = "goud_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
husky-rs = "0.1.3"
tempfile = "3.8"
bytemuck = "1.14"
criterion = { version = "0.5", features = ["html_reports"] }
hound = "3.5"

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "asset_benchmarks"
harness = false

[[bench]]
name = "sprite_batch_benchmarks"
harness = false

# [[bench]]
# name = "physics_benchmarks"
# harness = false
# Note: Disabled until ColliderShape and aabb module are exported publicly
