[package]
name = "goud-engine-core"
version = "0.0.832" # x-release-please-version
edition = "2021"
license = "MIT"
description = "GoudEngine core — internal implementation crate. Use goud-engine for the public API."
repository = "https://github.com/aram-devdocs/GoudEngine"
homepage = "https://github.com/aram-devdocs/GoudEngine"
readme = "README.md"
keywords = ["game-engine", "ecs", "rendering", "ffi"]
categories = ["game-engines", "graphics", "rendering"]

[features]
default = ["native"]
native = ["wgpu-backend", "dep:rodio", "dep:notify", "dep:cc", "dep:bindgen", "dep:cbindgen", "dep:tiled", "dep:rayon", "dep:env_logger", "dep:toml", "dep:gltf", "dep:tobj", "dep:jni", "net-udp", "net-tcp", "net-ws"]
legacy-glfw-opengl = ["dep:gl", "dep:glfw"]
net-udp = []
net-tcp = []
net-ws = ["dep:tungstenite", "dep:rustls"]
wgpu-backend = ["dep:wgpu", "dep:winit", "dep:naga", "dep:pollster"]
web = ["wgpu-backend", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys"]
rapier2d = ["dep:rapier2d"]
rapier3d = ["dep:rapier3d"]
headless = []

# TODO: https://github.com/aram-devdocs/GoudEngine/issues/8
[dependencies]
cc = { version = "1.2", optional = true }
bindgen = { version = "0.64.0", optional = true }
cgmath = "0.18.0"
crossbeam-channel = "0.5"
env_logger = { version = "0.11.6", optional = true }
gl = { version = "0.14.0", optional = true }
glfw = { version = "0.59.0", optional = true }
log = "0.4.17"
jni = { version = "0.21.1", features = ["invocation"], optional = true }
thiserror = "2.0.12"
image = "0.25"
fontdue = "0.9"
rustybuzz = "0.20"
unicode-bidi = "0.3"
cbindgen = { version = "0.29", optional = true }
tiled = { version = "0.15", optional = true }
rayon = { version = "1.11", optional = true }
rapier2d = { version = "0.22", optional = true }
rapier3d = { version = "0.22", optional = true }
notify = { version = "8", optional = true }
rodio = { version = "0.22", optional = true }
bincode = "1"
tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", optional = true }
gltf = { version = "1.4", optional = true }
tobj = { version = "4.0", optional = true, features = ["ahash"] }
bytemuck = "1.14"
goud_engine_macros = { version = "=0.0.832", path = "../goud_engine_macros" } # x-release-please-version
wgpu = { version = "28", optional = true }
winit = { version = "0.30", optional = true }
naga = { version = "28", optional = true, features = ["glsl-in", "wgsl-out"] }
pollster = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Response",
    "Document", "HtmlCanvasElement", "Element",
    "Performance",
    "console",
    "WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "ErrorEvent", "Event",
    "AudioContext", "AudioContextState", "AudioBuffer", "AudioBufferSourceNode",
    "AudioNode", "AudioParam",
    "GainNode", "StereoPannerNode", "MediaElementAudioSourceNode",
    "HtmlMediaElement", "HtmlAudioElement",
    "AudioDestinationNode", "BaseAudioContext",
    "Blob", "Url",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
interprocess = { git = "https://github.com/kotauskas/interprocess", rev = "41facdd4e7517cae4b99a44b24671603bc65041e" }

[lib]
name = "goud_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
husky-rs = "0.1.3"
tempfile = "3.27"
bytemuck = "1.14"
criterion = { version = "0.5", features = ["html_reports"] }
hound = "3.5"
proptest = "1"
rcgen = "0.14"

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "asset_benchmarks"
harness = false

[[bench]]
name = "sprite_batch_benchmarks"
harness = false

[[bench]]
name = "serialization_benchmarks"
harness = false

[[test]]
name = "native_main_thread"
path = "tests/native_main_thread.rs"
harness = false
required-features = ["native"]

[[test]]
name = "native_main_thread_ffi"
path = "tests/native_main_thread_ffi.rs"
harness = false
required-features = ["native"]

[[test]]
name = "jni_smoke"
path = "tests/jni_smoke.rs"
required-features = ["native"]

# [[bench]]
# name = "physics_benchmarks"
# harness = false
# Note: Disabled until ColliderShape and aabb module are exported publicly
