[package]
name = "goud_engine_macros"
version = "0.0.817" # x-release-please-version
edition = "2021"
description = "Proc-macro crate for GoudEngine FFI code generation"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
