[package]
name = "goud-engine"
version = "0.0.820" # x-release-please-version
edition = "2021"
description = "GoudEngine — build 2D and 3D games in Rust with zero FFI overhead"
license = "MIT"
repository = "https://github.com/aram-devdocs/GoudEngine"
homepage = "https://github.com/aram-devdocs/GoudEngine"
readme = "README.md"
keywords = ["game-engine", "ecs", "2d", "3d", "rust"]
categories = ["game-engines", "graphics"]

[lib]
# Explicit name avoids collision with goud-engine-core's [lib] name = "goud_engine".
# Users write: use goudengine::*;
name = "goudengine"

[dependencies]
goud-engine-core = { version = "=0.0.820", path = "../../goud_engine" } # x-release-please-version
