[package]
name = "goud-engine"
version = "0.0.828" # x-release-please-version
edition = "2021"
description = "GoudEngine — build 2D and 3D games in Rust with zero FFI overhead"
license = "MIT"
repository = "https://github.com/aram-devdocs/GoudEngine"
homepage = "https://github.com/aram-devdocs/GoudEngine"
readme = "README.md"
keywords = ["game-engine", "ecs", "2d", "3d", "rust"]
categories = ["game-engines", "graphics"]

[lib]
# Explicit name avoids collision with goud-engine-core's [lib] name = "goud_engine".
# Users write: use goudengine::*;
name = "goudengine"

[features]
default = ["native"]
native = ["goud-engine-core/native"]

[dependencies]
goud-engine-core = { version = "=0.0.828", path = "../../goud_engine", default-features = false } # x-release-please-version
