[package]
name = "goud-engine-node"
version = "0.0.828" # x-release-please-version
edition = "2021"
license = "MIT"
description = "Node.js native addon for GoudEngine (napi-rs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
goud-engine-core = { path = "../../../goud_engine" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
